--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Region</label>
-            <select class="form-control" name="ethnicity" placeholder="Enter you region" required>
+            <select class="form-control" name="region" placeholder="Enter you region" required>
                 <option class="placeholder" selected disabled value="">Select Region</option>
                 <option value="northeast">
                     northeast
@@ -44,7 +44,7 @@
        
         <div class="mb-3">
             <label class="form-label">BMI</label>
-            <input class="form-control" type="number" name="bmi"
+            <input class="form-control" name="bmi"
                 placeholder="Enter your BMI"/>
         </div>
 
